# denoising-fno

./: .gitignore  Makefile  README.md  pyproject.toml
config/: __init__.py  datasets.py  models.py  utils.py
config/configs/: __init__.py  data.py  env.py  models.py  train.py  wandb.py
denoising/: __init__.py  anisotropic.py  config_utils.py  dht.py  dht_np.py  evaluator.py  metrics.py  synthetic.py  train.py  trainer.py  utils.py
denoising/configs/: __init__.py  common.py  env.py  metrics.py  models.py
denoising/data/: __init__.py  bsd_datasets.py  data_registry.py  file_dataset.py  fno_dataset.py  sampler.py  utils.py
denoising/models/: __init__.py  conv.py  dht.py  fno.py  fno_blocks.py  model_registry.py  soft_gating.py  utils.py
notebooks/: AnisotropicDiffusion.ipynb  Evaluation.ipynb  FNO-Evaluation.ipynb  FNO-Training.ipynb  GenerateSynthetic.ipynb  HartleyTransform.ipynb  HyperparamSearch.ipynb  Playground.ipynb  Training.ipynb
scripts/: prepare_sidd.py  train.py
tests/: config.py  conv.py  dht.py  fno.py  models.py  utils.py
tests/data/: hartley-in-1-1-16-100.pt  hartley-in-1-1-16-50.pt  hartley-in-1-1-2-100.pt  hartley-in-1-1-2-50.pt  hartley-in-1-3-16-100.pt  hartley-in-1-3-16-50.pt  hartley-in-1-3-2-100.pt  hartley-in-1-3-2-50.pt  hartley-in-3-1-16-100.pt  hartley-in-3-1-16-50.pt  hartley-in-3-1-2-100.pt  hartley-in-3-1-2-50.pt  hartley-in-3-3-16-100.pt  hartley-in-3-3-16-50.pt  hartley-in-3-3-2-100.pt  hartley-in-3-3-2-50.pt  hartley-out-1-1-16-100.pt  hartley-out-1-1-16-50.pt  hartley-out-1-1-2-100.pt  hartley-out-1-1-2-50.pt  hartley-out-1-3-16-100.pt  hartley-out-1-3-16-50.pt  hartley-out-1-3-2-100.pt  hartley-out-1-3-2-50.pt  hartley-out-3-1-16-100.pt  hartley-out-3-1-16-50.pt  hartley-out-3-1-2-100.pt  hartley-out-3-1-2-50.pt  hartley-out-3-3-16-100.pt  hartley-out-3-3-16-50.pt  hartley-out-3-3-2-100.pt  hartley-out-3-3-2-50.pt
